# Collega-bot

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  bot.py  mem.py  players_info.py  pyproject.toml
src/: bot.py  config.py  logger.py  mem.py  players_info.py
